# its-maestro-poc

./: .gitignore  README.md
DMN_Rules/: Expedited_Screening.dmn  (+5 more)
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/: .gitignore  README.md  entry-points.json  main.mermaid  main.py  package-lock.json  package.json  project.uiproj  pyproject.toml  tsconfig.json  uipath.json
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/.agent/: SDK_REFERENCE.md
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/docs/: data-contract.md  demo-runbook.md  out-of-scope.md
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/evaluations/eval-sets/: smoke-test.json
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/evaluations/evaluators/: json-similarity.json
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/src/: index.ts
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/src/agent/: determineInterviewNeedAgent.ts
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/src/data/: mockDetermineInterviewNeedInputs.ts
DMN_Rules/IES-Maestro-POC/agents/IESCLIBuild_DetermineInterviewNeed_Agent/tests/: run-sample-cases.ts
DMN_Rules/expedited-screening-agent/: entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
DMN_Rules/expedited-screening-agent/evaluations/eval-sets/: smoke-test.json
DMN_Rules/expedited-screening-agent/evaluations/evaluators/: exact-match.json
(+125 files in other folders)
