[project]
name = "IES.Maestro.POC.agent.Determine.Interview"
version = "1.0.11"
description = "Deterministic UiPath coded agent for Determine Interview Need advisory review"
authors = [{ name = "Sohail Ghatnekar" }]
dependencies = [
    "uipath",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "UP"]
